# rust-script-engine-benchmark

./: Cargo.toml  README.md
engines/javascript/js-deno/: Cargo.toml
engines/javascript/js-deno/src/: main.rs
engines/javascript/js-jsc/: Cargo.toml
engines/javascript/js-jsc/src/: main.rs
engines/javascript/js-spidermonkey/: Cargo.toml
engines/javascript/js-spidermonkey/src/: main.rs
engines/javascript/js-v8/: Cargo.toml
engines/javascript/js-v8/src/: main.rs
engines/lua/lua-mlua/: Cargo.toml
engines/lua/lua-mlua/src/: main.rs
engines/python/py-pyo3-py37/: Cargo.toml
engines/python/py-pyo3-py37/src/: main.rs
samples/: sample.js  sample.lua  sample.py
scripts/: bench.sh
